# Cpp_Codes_and_Notes

./: .gitignore  README.md
00-basics/01-enums-and-structs/: 01-enums.cpp  04-constructor-and-destructor-in-struct.cpp  readme.md
00-basics/02-function-pointers/: 01-intro-to-function-pointer.cpp  02-passing-a-function-to-another-function.cpp  03-lambda-expression.cpp  readme.md
00-basics/03-passing-arguments-to-cpp-binary/: main.cpp  readme.md
00-basics/04-printing-colorful-texts/: main.cpp  readme.md
00-basics/enums-and-structs/: 02-structs-intro.cpp  03-functions-in-struct.cpp  04-constructor-and-destructor-in-struct.cpp  nasreen.cpp  readme.md  static_function.cpp
02-Namespace/: 01-intro_to_namespace.cpp  02-nested_namespace.cpp  03-anonymous_namespace.cpp  04-nested_anonymous_namespace.cpp  05-using_directive_in_namespace.cpp  06-aliasing_namespace.cpp  07-inline_directive.cpp  readme.md
03-error-handling/: 01-intro-to-error-handling.cpp  02-catch-different-exceptions.cpp  03-throwing-runtime-error.cpp  04-custom-exception.cpp  05-rethrow-exception.cpp  readme.md
04-smart-pointers/: 01-unique-pointer.cpp  02-shared-pointer.cpp  03-weak-pointer.cpp  readme.md
05-multithreading/: readme.md
cmake-usage/: CMakeLists.txt  learn_cmake.cpp  readme.md
cmake-usage/lib/: helper.cpp  helper.h
codes/: memory_leak.cpp
